--- a/client/scss/masthead.scss
+++ b/client/scss/masthead.scss
@@ -1,5 +1,6 @@
 .masthead {
   @include clearfix;
+  border-top: 2px solid #fff;
 
   #login-box {
     float: right;
